# update_updater

./: .gitattributes  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  ohos.build  updater.md  updater_common.gni  updater_default_cfg.gni  updater_ux_guide.md
etc/: BUILD.gn  (+1 more)
interfaces/kits/diff_patch/: BUILD.gn  diff_patch_interface.cpp
interfaces/kits/misc_info/: BUILD.gn  misc_info.cpp
interfaces/kits/slot_info/: BUILD.gn  slot_info.cpp
resources/: BUILD.gn
resources/font/: LICENSE.txt  README.md
resources/rk3568/pages/: confirm.json  menu.json  rk3568.json  upd.json
resources/rk3568/string/: string.json
services/: BUILD.gn  main.cpp  updater.cpp  updater_init.h  updater_main.cpp  updater_main.h  updater_preprocess.cpp  updater_ui.cpp  updater_ui.h  updater_utils.cpp
services/applypatch/: BUILD.gn  block_set.cpp  block_writer.cpp  command.cpp  command_function.cpp  command_process.cpp  command_process.h  data_writer.cpp  partition_record.cpp  raw_writer.cpp  raw_writer.h  store.cpp  transfer_manager.cpp  update_progress.cpp
services/common/ring_buffer/: BUILD.gn  ring_buffer.cpp  ring_buffer.h  ring_buffer_test.cpp
services/common/script_proportion/: BUILD.gn  script_proportion.cpp  script_proportion.h
services/diffpatch/: BUILD.gn  diffpatch.cpp  diffpatch.h
services/diffpatch/bzip2/: bzip2_adapter.cpp  bzip2_adapter.h  deflate_adapter.h  lz4_adapter.cpp  lz4_adapter.h  zip_adapter.cpp  zip_adapter.h
services/diffpatch/diff/: BUILD.gn  blocks_diff.cpp  blocks_diff.h  image_diff.cpp  image_diff.h  update_diff.cpp  update_diff.h
services/diffpatch/patch/: BUILD.gn  blocks_patch.cpp  blocks_patch.h  image_patch.cpp  image_patch.h  update_patch.cpp
services/diffpatch/patch_shared/: BUILD.gn  patch_shared.cpp  patch_shared.h
services/etc/: BUILD.gn  init.cfg  updater_common.cfg  updater_common_user.cfg  updater_hdcd.cfg  updater_init.cfg  updater_normal.cfg
services/factory_reset/: factory_reset.cpp  factory_reset.h
services/flashd/: BUILD.gn  Readme.md  blockdevice.cpp  blockdevice.h  flash_service.cpp  flash_service.h  flash_utils.h  flashd_basepkg.bat  partition.cpp  partition.h
services/flashd/common/: base.cpp  define.h  define_plus.h  flash_define.h  flashd_define.h  session.h  task.cpp  task.h  transfer.h
services/flashd/daemon/: commander.cpp  commander.h  commander_factory.h  daemon.cpp  daemon.h  daemon_common.h  daemon_tcp.cpp  daemon_unity.cpp  daemon_updater.cpp  daemon_updater.h  erase_commander.cpp  erase_commander.h  flash_commander.cpp  flash_commander.h  flashd_main.cpp  flashd_utils.cpp  format_commander.cpp  format_commander.h  system_depend.cpp  update_commander.cpp  update_commander.h
services/flashd/host/: client.cpp  client.h  host_common.h  host_updater.cpp  host_updater.h  main.cpp  server.cpp  server_for_client.cpp  translate.cpp
services/flashd/image_writer/: image_writer.cpp  image_writer.h
services/flow_update/update_bin/: BUILD.gn  bin_flow_update.cpp  bin_flow_update.h  bin_process.cpp  bin_process.h  component_processor.cpp  component_processor.h
services/fs_manager/: BUILD.gn  cmp_partition.cpp  do_partition.cpp  mount.cpp  partition_const.h  partitions.cpp
services/hardware_fault/: hardware_fault_retry.cpp
services/hdi/client/: update_hdi_client.cpp  update_hdi_client.h
services/hdi/server/: BUILD.gn  update_hdi_impl.cpp
services/hwfault_repair/: updater_hwfault_retry.cpp
services/hwfault_retry/: hwfault_retry.cpp
services/include/applypatch/: block_set.h  block_writer.h  command.h  command_const.h  command_function.h  data_writer.h  partition_record.h  store.h  transfer_manager.h  update_progress.h  updater_env.h
services/include/flashd/: flashd.h
services/include/fs_manager/: cmp_partition.h  mount.h  partitions.h
services/include/log/: dump.h  log.h
services/include/package/: cert_verify.h  hash_data_verifier.h  packages_info.h  pkg_info_utils.h  pkg_manager.h
services/include/patch/: update_patch.h
services/include/rust/: hash_signed_data.h  image_hash_check.h
services/include/script/: script_instruction.h  script_manager.h
services/include/updater/: hardware_fault_retry.h  hwfault_retry.h  updater.h  updater_const.h  updater_hwfault_retry.h  updater_preprocess.h
services/log/: BUILD.gn  dump.cpp  log.cpp
services/package/: BUILD.gn
services/ptable_parse/: BUILD.gn  composite_ptable.cpp  composite_ptable.h  emmc_ptable.cpp  emmc_ptable.h  ptable.cpp  ptable.h  ptable_manager.cpp  ptable_manager.h  ptable_process.cpp  ptable_process.h  ufs_ptable.cpp  ufs_ptable.h
services/script/: BUILD.gn  bison.sh
services/sdcard_update/: BUILD.gn  sdcard_update.cpp  sdcard_update.h
services/stream_update/: BUILD.gn  bin_chunk_update.cpp  bin_chunk_update.h
services/ui/: BUILD.gn  animation_label.cpp  animation_label.h  copy_ui_extend_cfg.py  drm_driver.cpp  drm_driver.h  frame.cpp  frame.h  input_event.cpp  input_event.h  progress_bar.cpp  progress_bar.h  surface_dev.cpp  surface_dev.h  text_label.cpp  text_label.h  updater_ui.cpp  updater_ui.h  updater_ui_config.cpp  updater_ui_config.h  updater_ui_const.h  updater_ui_empty.h  updater_ui_env.cpp  updater_ui_env.h  updater_ui_facade.cpp  updater_ui_facade.h  updater_ui_stub.cpp  updater_ui_stub.h  updater_ui_tools.cpp  updater_ui_tools.h  updater_ui_traits.h  view.cpp  view.h
services/updater_binary/: BUILD.gn  main.cpp  update_image_block.cpp  update_image_block.h  update_image_patch.cpp  update_image_patch.h  update_partitions.cpp  update_partitions.h  update_processor.cpp  update_processor.h  update_processor_stream.cpp  update_processor_stream.h
services/write_state/: BUILD.gn  write_state.cpp  write_state.h
test/unittest/: BUILD.gn
utils/: BUILD.gn  partition_utils.cpp  updater_reboot.cpp  utils.cpp  utils_common.cpp  utils_fs.cpp  write_updater.cpp
utils/include/: error_code.h  event_id.h  macros.h  macros_updater.h  partition_utils.h  updater_event.h  utils.h  utils_common.h  utils_fs.h
utils/json/: json_node.cpp  json_node.h  json_visitor.h  traits_util.h
(+351 files in other folders)
