# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

updater_resouces_list = [
  "font/SourceHanSansSC-Regular.otf",
  "${product_name}/images/icon/darkOUCOHlogo.png",
  "${product_name}/images/icon/lightOUCOHlogo.png",
  "${product_name}/images/icon/icon_failed.png",
  "${product_name}/images/icon/icon_ok.png",
  "${product_name}/images/warn/tips.png",
  "${product_name}/images/progress/dark_flash_00000.png",
  "${product_name}/images/progress/dark_flash_00001.png",
  "${product_name}/images/progress/dark_flash_00002.png",
  "${product_name}/images/progress/dark_flash_00003.png",
  "${product_name}/images/progress/dark_flash_00004.png",
  "${product_name}/images/progress/dark_flash_00005.png",
  "${product_name}/images/progress/dark_flash_00006.png",
  "${product_name}/images/progress/dark_flash_00007.png",
  "${product_name}/images/progress/dark_flash_00008.png",
  "${product_name}/images/progress/dark_flash_00009.png",
  "${product_name}/images/progress/dark_flash_00010.png",
  "${product_name}/images/progress/dark_flash_00011.png",
  "${product_name}/images/progress/dark_flash_00012.png",
  "${product_name}/images/progress/dark_flash_00013.png",
  "${product_name}/images/progress/dark_flash_00014.png",
  "${product_name}/images/progress/dark_flash_00015.png",
  "${product_name}/images/progress/dark_flash_00016.png",
  "${product_name}/images/progress/dark_flash_00017.png",
  "${product_name}/images/progress/dark_flash_00018.png",
  "${product_name}/images/progress/dark_flash_00019.png",
  "${product_name}/images/progress/dark_flash_00020.png",
  "${product_name}/images/progress/dark_flash_00021.png",
  "${product_name}/images/progress/flash_00000.png",
  "${product_name}/images/progress/flash_00001.png",
  "${product_name}/images/progress/flash_00002.png",
  "${product_name}/images/progress/flash_00003.png",
  "${product_name}/images/progress/flash_00004.png",
  "${product_name}/images/progress/flash_00005.png",
  "${product_name}/images/progress/flash_00006.png",
  "${product_name}/images/progress/flash_00007.png",
  "${product_name}/images/progress/flash_00008.png",
  "${product_name}/images/progress/flash_00009.png",
  "${product_name}/images/progress/flash_00010.png",
  "${product_name}/images/progress/flash_00011.png",
  "${product_name}/images/progress/flash_00012.png",
  "${product_name}/images/progress/flash_00013.png",
  "${product_name}/images/progress/flash_00014.png",
  "${product_name}/images/progress/flash_00015.png",
  "${product_name}/images/progress/flash_00016.png",
  "${product_name}/images/progress/flash_00017.png",
  "${product_name}/images/progress/flash_00018.png",
  "${product_name}/images/progress/flash_00019.png",
  "${product_name}/images/progress/flash_00020.png",
  "${product_name}/images/progress/flash_00021.png",
  "${product_name}/pages/config.json",
  "${product_name}/pages/rk3568.json",
  "${product_name}/pages/confirm.json",
  "${product_name}/pages/menu.json",
  "${product_name}/pages/upd.json",
  "${product_name}/string/string.json"
]

updater_resources_target = []

foreach(file, updater_resouces_list) {
  _name = "$file"
  ohos_prebuilt_etc(_name) {
    source = "//base/update/updater/resources/$file"
    module_install_dir = "resources"
    if (file == "font/SourceHanSansSC-Regular.otf") {
      module_install_dir = "user/data"
    } else if (get_path_info(file, "dir") != "") {
      module_install_dir = get_path_info(string_replace(file, "${product_name}", "resources"), "dir")
    }
    install_images = [ "updater" ]
    part_name = "updater"
  }
  updater_resources_target += [ ":$_name" ]
}

group("updater_resources") {
  deps = updater_resources_target
}
