# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_path = rebase_path("${updater_absolutely_path}", ".")
ohos_static_library("libapplypatch") {
  sources = [
    "block_set.cpp",
    "block_writer.cpp",
    "command.cpp",
    "command_function.cpp",
    "command_process.cpp",
    "data_writer.cpp",
    "partition_record.cpp",
    "raw_writer.cpp",
    "store.cpp",
    "transfer_manager.cpp",
    "update_progress.cpp",
  ]

  include_dirs = [
    "${updater_path}/services/include",
    "${updater_path}/services/applypatch",
    "${updater_path}/services/common",
    "${updater_path}/services/script/script_manager",
    "${updater_path}/services/script/threadpool",
    "${updater_path}/utils/include",
    "${updater_path}/interfaces/kits/include",
    "${updater_path}/services/include/script",
    "${updater_path}/services/include/package",
    "${updater_path}/services/include/log",
  ]

  deps = [
    "${updater_path}/services/diffpatch/patch:libpatch",
    "${updater_path}/services/fs_manager:libfsmanager",
    "${updater_path}/services/script:libthreadpool",
  ]
  external_deps = [
    "bounds_checking_function:libsec_static",
    "bzip2:libbz2",
    "init:libbegetutil_static",
    "init:libfsmanager_static_real",
    "openssl:libcrypto_static",
  ]
  subsystem_name = "updater"
  part_name = "updater"
}
