# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

config("diff_config") {
  cflags_cc = [
    "-frtti",
    "-std=c++17",
  ]
  if (is_mingw) {
    cflags_cc += [ "-Wno-inconsistent-dllimport" ]
  }
}

ohos_executable("diff") {
  use_exceptions = true
  configs = [ ":diff_config" ]

  sources = [
    "./bzip2/bzip2_adapter.cpp",
    "./bzip2/lz4_adapter.cpp",
    "./bzip2/zip_adapter.cpp",
    "./diff/blocks_diff.cpp",
    "./diff/image_diff.cpp",
    "./diff/update_diff.cpp",
    "./diff_main.cpp",
    "./diffpatch.cpp",
    "./patch/blocks_patch.cpp",
    "./patch/image_patch.cpp",
    "./patch/update_patch.cpp",
    "../../services/package/pkg_manager/pkg_utils.cpp",
  ]

  include_dirs = [
    ".",
    "../../interfaces/kits/include",
    "../../services/include/package",
    "../../services/include/patch",
    "../../services/include",
    "../../utils/include",
    "../../services/diffpatch/bzip2",
    "../../services/diffpatch/diff",
    "../../services/diffpatch/patch",
    "../../services/diffpatch",
    "../../services/package/pkg_manager",
    "../../services/include/log",
    "//third_party/bounds_checking_function/include",
    "//third_party/openssl/include",
    "//third_party/bzip2",
    "//third_party/zlib",
    "//third_party/lz4/lib",
  ]

  deps = [
    "../../services/log:libupdaterlog",
    "../../services/package:libupdaterpackage",
    "//third_party/bzip2:libbz2",
    "//third_party/lz4:liblz4_static",
    "//third_party/openssl:libcrypto_static",
    "//third_party/zlib:libz",
  ]

  if (is_mingw) {
    static_link = false
    libs = [ "setupapi" ]
    ldflags = [
      "-Wl,--whole-archive",
      "-lpthread",
      "-Wl,--no-whole-archive",
    ]
  }

  if (is_linux) {
    static_link = false

    ldflags = [
      "-Wl,--whole-archive",
      "-lpthread",
      "-latomic",
      "-ldl",
      "-lrt",
      "-Wl,--no-whole-archive",
    ]
  }
  install_enable = false
  subsystem_name = "developtools"
  part_name = "updater"
}
