# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

updater_usb_init_cfg_path = "//base/startup/init/services/etc/init.usb.cfg"
updater_init_usb_configfs_path_cfg =
    "//drivers/peripheral/usb/cfg/init.usb.configfs.cfg"
updater_faultloggerd_cfg =
    "//base/hiviewdfx/faultloggerd/services/config/faultloggerd.cfg"
updater_hilog_cfg = "//base/hiviewdfx/hilog/services/hilogd/etc/hilogd.cfg"
hdc_cfg = "//developtools_hdc/src/daemon/etc/hdcd.cfg"
hdc_root_cfg = "//developtools_hdc/src/daemon/etc/hdcd.root.cfg"
hdc_para_dac = "//developtools_hdc/src/daemon/etc/hdc.para.dac"

ohos_prebuilt_etc("hdcd.cfg") {
  source = "${hdc_cfg}"
  if (build_variant == "user") {
    source = "${hdc_root_cfg}"
  }
  install_images = [ "updater" ]
  part_name = "updater"
}

ohos_prebuilt_etc("hdcd.param.dac") {
  source = "${hdc_para_dac}"
  install_images = [ "updater" ]
  part_name = "updater"
}

ohos_prebuilt_etc("updater_hilog.cfg") {
  source = "${updater_hilog_cfg}"
  install_images = [ "updater" ]
  part_name = "updater"
}

ohos_prebuilt_etc("updater_faultloggerd.cfg") {
  source = "${updater_faultloggerd_cfg}"
  install_images = [ "updater" ]
  part_name = "updater"
}

ohos_prebuilt_etc("updater_common.cfg") {
  source = "updater_common.cfg"
  install_images = [ "updater" ]
  part_name = "updater"
}

ohos_prebuilt_etc("updater_init_usb.cfg") {
  source = "${updater_usb_init_cfg_path}"
  install_images = [ "updater" ]
  part_name = "updater"
}

ohos_prebuilt_etc("updater_init_usb_configfs.cfg") {
  source = "${updater_init_usb_configfs_path_cfg}"
  install_images = [ "updater" ]
  part_name = "updater"
}

group("updater_files") {
  deps = [
    "hdcd.cfg",
    "hdcd.param.dac",
    ":updater_common.cfg",
    ":updater_faultloggerd.cfg",
    ":updater_hilog.cfg",
    ":updater_init_usb.cfg",
    ":updater_init_usb_configfs.cfg",
  ]
}
